# AIR

./: .gitignore  README.md  pyproject.toml
figures/: protocol_overview.tex
scripts/: fetch_features.py  gen_explanation.py  gen_explanation_decode.py  main.py  open_neuronpedia.py  print_examples.py  utils.py
src/: correlation_score.py  explainer.py  llm.py  prompts.py
