[project]
name = "air"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "eai-delphi @ git+https://github.com/EleutherAI/delphi.git",
    "neuron-explainer @ git+https://github.com/decoderesearch/automated-interpretability.git",
    "python-dotenv",
]

[tool.setuptools]
packages = ["src"]
